# hackrare2026

./: .gitignore  ValidationCase1  ValidationCase2  ValidationCase3  ValidationCase4  ValidationCase5  analyze_data_model.py  download_primekg.sh  eda.py  mini.csv  process_primekg.py  pyproject.toml  requirements.txt  test_full.py  test_integration.py
diageno/: .env.example  Dockerfile.api  Dockerfile.etl  Dockerfile.ui  README.md  __init__.py  docker-compose.yml  pyproject.toml
diageno/api/: __init__.py  main.py  schemas.py
diageno/api/routes/: evaluate.py  (+5 more)
diageno/config/: __init__.py  logging.yaml  settings.py
diageno/core/: __init__.py  equity.py  evidence.py  genomic_advisor.py  next_best_step.py  patient_state.py  uncertainty.py
diageno/db/: __init__.py  models.py  session.py
diageno/etl/: __init__.py  download_bronze.py  load_gold.py  parse_silver.py  utils.py
diageno/evaluation/: __init__.py  experiments.py  metrics.py  replay.py
diageno/k8s/: api.yaml  etl-jobs.yaml  grafana-alertmanager.yaml  minio.yaml  mlflow.yaml  monitoring.yaml  n8n.yaml  namespace.yaml  postgres.yaml  redis.yaml  ui.yaml
diageno/monitoring/: alerting_rules.yml  alertmanager.yml  prometheus.yml
diageno/n8n/: pipeline-workflow.json
diageno/scripts/: deploy-all.sh  init_mlflow.py  port-forward.sh  retrain_calibrator.py  run-local.sh  setup-kind.sh  test_api.py  test_endpoints.py  test_inference.py  test_syntax.py  test_updates.py
diageno/training/: __init__.py  disease_scorer.py  embeddings.py  enhanced_scorer.py  phenotype_selector.py  test_policy.py  train_all.py
diageno/ui/: app.py
(+21 files in other folders)
