[project]
name = "diageno"
version = "0.1.0"
description = "Rare Disease Diagnostic Recommendation Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "redis>=5.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "streamlit>=1.32",
    "plotly>=5.19",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.5",
    "pronto>=2.5",
    "mlflow>=2.11",
    "prometheus-client>=0.20",
    "python-dotenv>=1.0",
    "minio>=7.2",
    "orjson>=3.9",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.setuptools]
packages = [
    "diageno",
    "diageno.config",
    "diageno.db",
    "diageno.etl",
    "diageno.training",
    "diageno.api",
    "diageno.api.routes",
    "diageno.api.services",
]

[tool.setuptools.package-dir]
diageno = "."

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
